added return button on error page

--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www/thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add Product</title>
+    <title>Add User</title>
 
     <link rel="icon" href="img/Fevicon.png" type="image/png">
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -35,19 +35,19 @@
                 </button>
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="C:\Users\mflor\Desktop\Final Project\onlineShopProject\src\main\resources\templates\home.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>
                         <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>
-                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>
-                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
-                            </ul>
+                            <!--                            <ul class="dropdown-menu">-->
+                            <!--                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>-->
+                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>&ndash;&gt;-->
+                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>&ndash;&gt;-->
+                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>&ndash;&gt;-->
+                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>&ndash;&gt;-->
+                            <!--                            </ul>-->
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/addUser">Add User</a></li>
                     </ul>
 
                 </div>
@@ -56,7 +56,6 @@
     </div>
 </header>
 <!--================ End Header Menu Area =================-->
-
 <!--================Login Box Area =================-->
 <section class="login_box_area section-margin">
     <div class="container">
