--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,11 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title>Add User</title>
+
+    <link rel="icon" href="img/Fevicon.png" type="image/png">
+    <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="vendors/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="vendors/linericon/style.css">
+    <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendors/nice-select/nice-select.css">
+    <link rel="stylesheet" href="vendors/nouislider/nouislider.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/custom.css">
+
 </head>
 <body>
 
-<p>This is the error page</p>
+<section class="section-margin calc-60px">
+    <div class = "container">
+        <div class="row">
+            <div class="col-lg-12">
+
+            <p>Error</p>
+
+            <img src="src/main/resources/static/img/error_handling.jpg" alt="Error image">
+
+            <button class="button button-register w-100"><a href="/home">Return to the site</a></button>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 </body>
