Added user registration

--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -65,7 +65,7 @@
             <div class="col-lg-6">
                 <div class="owl-carousel owl-theme s_Product_carousel">
                     <div class="single-prd-item">
-                        <img class="img-fluid" src="/img/category/s-p1.jpg" alt="">
+                        <img class="img-fluid" th:src="${'data:image/png; base64, ' + productDto.image}" alt="">
                     </div>
 
                 </div>
