--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,12 +40,12 @@
       <div class="col-lg-6">
         <div class="login_form_inner">
           <h3>Log in to enter</h3>
-          <form class="row login_form" action="#/" id="contactForm" >
+          <form class="row login_form" action="/login" method="post" id="contactForm" >
             <div class="col-md-12 form-group">
-              <input type="text" class="form-control" id="name" name="name" placeholder="Username" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
+              <input type="text" class="form-control" id="email" name="username" placeholder="Username" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
             </div>
             <div class="col-md-12 form-group">
-              <input type="text" class="form-control" id="name" name="name" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
+              <input type="text" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
             </div>
             <div class="col-md-12 form-group">
               <div class="creat_account">
