--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -23,6 +23,7 @@
 
 </head>
 <body>
+<div th:insert="fragments/menu :: menu" ></div>
 
 <!--================Login Box Area =================-->
 <section class="login_box_area section-margin">
