--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www/thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Title</title>
 
     <link rel="icon" href="/img/Fevicon.png" type="image/png">
     <link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css">
@@ -11,53 +12,15 @@
     <link rel="stylesheet" href="/vendors/linericon/style.css">
     <link rel="stylesheet" href="/vendors/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="/vendors/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="/vendors/nice-select/nice-select.css">/
+    <link rel="stylesheet" href="/vendors/nice-select/nice-select.css">
     <link rel="stylesheet" href="/vendors/nouislider/nouislider.min.css">
 
-
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/custom.css">
 
+    <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body>
-
-
-<!--================ Start Header Menu Area =================-->
-<header class="header_area">
-    <div class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-                <!--                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>-->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                               aria-expanded="false">Shop</a>
-                            <!--                            <ul class="dropdown-menu">-->
-                            <!--                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>-->
-                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>&ndash;&gt;-->
-                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>&ndash;&gt;-->
-                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>&ndash;&gt;-->
-                            <!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>&ndash;&gt;-->
-                            <!--                            </ul>-->
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="/addUser">Add User</a></li>
-                    </ul>
-
-                </div>
-            </div>
-        </nav>
-    </div>
-</header>
-<!--================ End Header Menu Area =================-->
-
+<div th:insert="fragments/menu :: menu"></div>
 <!--================Single Product Area =================-->
 <div class="product_image_area">
     <div class="container">
@@ -65,28 +28,30 @@
             <div class="col-lg-6">
                 <div class="owl-carousel owl-theme s_Product_carousel">
                     <div class="single-prd-item">
-                        <img class="img-fluid" th:src="${'data:image/png; base64, ' + productDto.image}" alt="">
+                        <img class="img-fluid" th:src="${'data:image/png; base64, '+productDto.image}" alt="">
                     </div>
-
                 </div>
             </div>
             <div class="col-lg-5 offset-lg-1">
                 <div class="s_product_text">
-                    <h3 th:text="${productDto.name}">Faded SkyBlu Denim Jeans</h3>
-                    <h2 th:text="${'$' + productDto.price}"></h2>
+                    <h3 th:text="${productDto.name}"></h3>
+                    <h2 th:text="${'$'+ productDto.price}"></h2>
                     <ul class="list">
-                        <li><a class="active" href="#"><span>Category: </span> <span th:text="${productDto.category}"></span></a></li>
-                        <li><a href="#"><span>Availibility</span><span th:text="${productDto.quantity}"></span></a></li>
+                        <li><a class="active" href="#"><span>Category :</span> <span th:text="${productDto.category}"></span></a></li>
+                        <li><a href="#"><span>Availibility :</span> <span th:text="${productDto.quantity}"></span></a></li>
+
                     </ul>
                     <p th:text="${productDto.description}"></p>
                     <div class="product_count">
-                        <label for="qty">Quantity:</label>
-                        <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-                                class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
-                        <input type="text" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                        <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-                                class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>
-                        <a class="button primary-btn" href="#">Add to Cart</a>
+                        <form th:object="${selectedProductDto}" th:action="@{/product/{y}/{x}(x=${productDto.id},y=${productDto.name})}" method="post">
+                            <label for="qty">Quantity:</label>
+                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                    class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
+                            <input type="text" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
+                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                    class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>
+                            <a class="button primary-btn" href="#">Add to Cart</a>
+                        </form>
                     </div>
                     <div class="card_area d-flex align-items-center">
                         <a class="icon_btn" href="#"><i class="lnr lnr lnr-diamond"></i></a>
@@ -98,7 +63,6 @@
     </div>
 </div>
 <!--================End Single Product Area =================-->
-    <br>
 
 <script src="/vendors/jquery/jquery-3.2.1.min.js"></script>
 <script src="/vendors/bootstrap/bootstrap.bundle.min.js"></script>
@@ -108,7 +72,5 @@
 <script src="/vendors/jquery.ajaxchimp.min.js"></script>
 <script src="/vendors/mail-script.js"></script>
 <script src="/js/main.js"></script>
-
-
 </body>
 </html>
