--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,42 +18,44 @@
 
 </head>
 <body>
+<div th:insert="fragments/menu :: menu" ></div>
 
-<!--================ Start Header Menu Area =================-->
-<header class="header_area">
-    <div class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-<!--                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>-->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                               aria-expanded="false">Shop</a>
-<!--                            <ul class="dropdown-menu">-->
-<!--                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>-->
-<!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>&ndash;&gt;-->
-<!--                            </ul>-->
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="/addUser">Add User</a></li>
-                    </ul>
 
-                </div>
-            </div>
-        </nav>
-    </div>
-</header>
-<!--================ End Header Menu Area =================-->
+<!--&lt;!&ndash;================ Start Header Menu Area =================&ndash;&gt;-->
+<!--<header class="header_area">-->
+<!--    <div class="main_menu">-->
+<!--        <nav class="navbar navbar-expand-lg navbar-light">-->
+<!--            <div class="container">-->
+<!--&lt;!&ndash;                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>&ndash;&gt;-->
+<!--                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
+<!--                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--                    <span class="icon-bar"></span>-->
+<!--                    <span class="icon-bar"></span>-->
+<!--                    <span class="icon-bar"></span>-->
+<!--                </button>-->
+<!--                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">-->
+<!--                    <ul class="nav navbar-nav menu_nav ml-auto mr-auto">-->
+<!--                        <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>-->
+<!--                        <li class="nav-item submenu dropdown">-->
+<!--                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"-->
+<!--                               aria-expanded="false">Shop</a>-->
+<!--&lt;!&ndash;                            <ul class="dropdown-menu">&ndash;&gt;-->
+<!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                            </ul>&ndash;&gt;-->
+<!--                        </li>-->
+<!--                        <li class="nav-item"><a class="nav-link" href="/addUser">Add User</a></li>-->
+<!--                    </ul>-->
+
+<!--                </div>-->
+<!--            </div>-->
+<!--        </nav>-->
+<!--    </div>-->
+<!--</header>-->
+<!--&lt;!&ndash;================ End Header Menu Area =================&ndash;&gt;-->
 
 
 <!-- ================ trending product section start ================= -->
