--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -47,10 +47,8 @@
                             <label for="qty">Quantity:</label>
                             <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                     class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
-                            <input type="text" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-                                    class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>
-                            <a class="button primary-btn" href="#">Add to Cart</a>
+                            <input th:field="*{quantity}" type="text" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
+                            <button class="button primary-btn" type="submit">Add to Cart</button>
                         </form>
                     </div>
                     <div class="card_area d-flex align-items-center">
